Change references of site.url to site.baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ permalink: /:title/
 paginate: 6
 paginate_path: /:num/
 exclude: [README.md]
-url: "http://aptary.github.io/unitedshapes"
+baseurl: "http://unitedshapes.com"
