--- a/_config.yml
+++ b/_config.yml
@@ -5,4 +5,4 @@ permalink: /:title/
 paginate: 6
 paginate_path: /:num/
 exclude: [README.md]
-baseurl: "http://unitedshapes.com"
+baseurl: "http://edwardball.github.io/unitedshapes"
